--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
         
 
     <title>광명철거</title>
-    <meta name="description" content="광명시철거업체 광명붙박이장철거 광명시폐가구수거 광명시폐기물처리 철산동철거">
-    <meta name="keywords" content="광명시철거업체 광명붙박이장철거 광명시폐가구수거 광명시폐기물처리 철산동철거">
+    <meta name="description" content="광명시철거업체 광명붙박이장철거 상가,내부,사무실,아파트,인테리어,칸막이,마루,판넬,철산동철거,일직동철거,하안동철거,일직동철거공사 전문">
+    <meta name="keywords" content="광명시철거업체 광명붙박이장철거 상가,내부,사무실,아파트,인테리어,칸막이,마루,판넬,철산동철거,일직동철거,하안동철거,일직동철거공사 전문">
     <meta property="og:type" content="website">
     <meta property="og:url" content="http://azoo.qustmddus.com">
     <meta property="og:title" content="광명철거업체">
     <meta property="og:site_name" content="광명철거업체">
-    <meta property="og:description" content="광명시철거업체 광명붙박이장철거 광명시폐가구수거 광명시폐기물처리 철산동철거">
+    <meta property="og:description" content="광명시철거업체 광명붙박이장철거 상가,내부,사무실,아파트,인테리어,칸막이,마루,판넬,철산동철거,일직동철거,하안동철거,일직동철거공사 전문">
     <link rel="alternate" type="application/rss+xml" href="http://azoo.qustmddus.com/feed.xml">
 
     <!-- Stylesheet -->
